--- a/web-app/css/app.css
+++ b/web-app/css/app.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Pinyon+Script);
 
 body {
-    margin-top: 150px;
+    padding-top: 150px;
     background: rgb(28, 4, 23) url('/images/bg.jpg') no-repeat center top;
     font-family: Times, 'Times New Roman', serif;
     color: rgb(207, 199, 194);
@@ -86,4 +86,42 @@ a:hover {
 .linkbox {
     text-align: center;
     padding: 10px 0;
+}
+
+/* Desktop
+------------------------- */
+@media (max-width: 1199px) and (min-width: 981px) {
+
+}
+
+/* Tablet to desktop
+------------------------- */
+@media (min-width: 768px) and (max-width: 980px) {
+    /* Remove any padding from the body */
+    body {
+        padding-top: 0;
+    }
+
+    h3 {
+        font-size: 1.3em;
+    }
+
+}
+
+/* Tablet
+------------------------- */
+@media (max-width: 767px) {
+    /* Remove any padding from the body */
+    body {
+        padding-top: 0;
+    }
+}
+
+/* Landscape phones
+------------------------- */
+@media (max-width: 480px) {
+    /* Remove padding above jumbotron */
+    body {
+        padding-top: 0;
+    }
 }
